# pypwn

./: README.md  pyproject.toml
src/pypwn/core/abstract/: module.py  process.py  target.py
src/pypwn/core/mixins/: elf.py  libc.py  rop.py
src/pypwn/core/protocols/: __init__.py
src/pypwn/modules/: exec_shell.py  find_function.py  find_offset.py  format_string_magic.py  get_libc_address.py
src/pypwn/utils/: gdb_wrapper.py  libc_finder.py
